lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(types) {
          return types[types.length - 1];
        },
        peg$c1 = "unit",
        peg$c2 = { type: "literal", value: "unit", description: "\"unit\"" },
        peg$c3 = function() { return Type.baseEnv.get('unit'); },
        peg$c4 = "null",
        peg$c5 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c6 = function() { return Type.baseEnv.get('null'); },
        peg$c7 = "boolean",
        peg$c8 = { type: "literal", value: "boolean", description: "\"boolean\"" },
        peg$c9 = function() { return Type.baseEnv.get('boolean'); },
        peg$c10 = "bool",
        peg$c11 = { type: "literal", value: "bool", description: "\"bool\"" },
        peg$c12 = "integer",
        peg$c13 = { type: "literal", value: "integer", description: "\"integer\"" },
        peg$c14 = function() { return Type.baseEnv.get('integer'); },
        peg$c15 = "int",
        peg$c16 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c17 = "float",
        peg$c18 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c19 = function() { return Type.baseEnv.get('float'); },
        peg$c20 = "string",
        peg$c21 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c22 = function() { return Type.baseEnv.get('string'); },
        peg$c23 = "date",
        peg$c24 = { type: "literal", value: "date", description: "\"date\"" },
        peg$c25 = function() { return Type.baseEnv.get('date'); },
        peg$c26 = "[",
        peg$c27 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c28 = "]",
        peg$c29 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c30 = function(inner) { return Type.baseEnv.get('array')(inner); },
        peg$c31 = "{",
        peg$c32 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c33 = "}",
        peg$c34 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c35 = function(props) { return Type.baseEnv.get('object')(props); },
        peg$c36 = ":",
        peg$c37 = { type: "literal", value: ":", description: "\":\"" },
        peg$c38 = "=",
        peg$c39 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c40 = function(key, type, defaultVal) { return Type.baseEnv.get('property')(key, type, defaultVal); },
        peg$c41 = function(key, type) { return Type.baseEnv.get('property')(key, type); },
        peg$c42 = ",",
        peg$c43 = { type: "literal", value: ",", description: "\",\"" },
        peg$c44 = "(",
        peg$c45 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c46 = ")",
        peg$c47 = { type: "literal", value: ")", description: "\")\"" },
        peg$c48 = function(types, type) {
          if (types.length == 0) {
            return type;
          } else {
            return Type.baseEnv.get('oneOf')(types.concat([ type ]));
          }
        },
        peg$c49 = "|",
        peg$c50 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c51 = function(type) { return type; },
        peg$c52 = "->",
        peg$c53 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c54 = function(argTypes, retType) {
          return Type.baseEnv.get('procedure')(argTypes, retType);
        },
        peg$c55 = function(items) { return items; },
        peg$c56 = function(item) { return item; },
        peg$c57 = function(keyVals) { return objectHelper(keyVals); },
        peg$c58 = function(key, val) { return [ key, val ]; },
        peg$c59 = function() { return ',' },
        peg$c60 = function(s) { return s.value; },
        peg$c61 = function(s) { return s; },
        peg$c62 = "undefined",
        peg$c63 = { type: "literal", value: "undefined", description: "\"undefined\"" },
        peg$c64 = function() { return undefined; },
        peg$c65 = function() { return null; },
        peg$c66 = "true",
        peg$c67 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c68 = function() { return true; },
        peg$c69 = "false",
        peg$c70 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c71 = function() { return false; },
        peg$c72 = function(int, frac, exp) {
          return numberHelper(int, frac, exp);
        },
        peg$c73 = function(int, frac) {
          return numberHelper(int, frac, '');
        },
        peg$c74 = "-",
        peg$c75 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c76 = function(frac) {
          return numberHelper('-', frac, '');
        },
        peg$c77 = function(frac) {
          return numberHelper('', frac, '');
        },
        peg$c78 = function(int, exp) {
          return numberHelper(int, '', exp);
        },
        peg$c79 = function(int) {
          return numberHelper(int, '', '');
        },
        peg$c80 = function(digits) { return digits.join(''); },
        peg$c81 = function(digits) { return ['-'].concat(digits).join(''); },
        peg$c82 = ".",
        peg$c83 = { type: "literal", value: ".", description: "\".\"" },
        peg$c84 = function(digits) { return ['.'].concat(digits).join(''); },
        peg$c85 = function(digits) { return ['e'].concat(digits).join(''); },
        peg$c86 = /^[eE]/,
        peg$c87 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c88 = /^[+\-]/,
        peg$c89 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c90 = /^[0-9]/,
        peg$c91 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c92 = /^[1-9]/,
        peg$c93 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c94 = /^[0-9a-fA-F]/,
        peg$c95 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c96 = "\"",
        peg$c97 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c98 = function(chars) { return chars.join(''); },
        peg$c99 = "'",
        peg$c100 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c101 = /^[^"'\\\0-\x1F]/,
        peg$c102 = { type: "class", value: "[^\"'\\\\\\0-\\x1F\\x7f]", description: "[^\"'\\\\\\0-\\x1F\\x7f]" },
        peg$c103 = "\\\"",
        peg$c104 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c105 = function() { return '"';  },
        peg$c106 = "\\'",
        peg$c107 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c108 = function() { return "'"; },
        peg$c109 = "\\\\",
        peg$c110 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c111 = function() { return "\\"; },
        peg$c112 = "\\/",
        peg$c113 = { type: "literal", value: "\\/", description: "\"\\\\/\"" },
        peg$c114 = function() { return "/";  },
        peg$c115 = "\\b",
        peg$c116 = { type: "literal", value: "\\b", description: "\"\\\\b\"" },
        peg$c117 = function() { return "\b"; },
        peg$c118 = "\\f",
        peg$c119 = { type: "literal", value: "\\f", description: "\"\\\\f\"" },
        peg$c120 = function() { return "\f"; },
        peg$c121 = "\\n",
        peg$c122 = { type: "literal", value: "\\n", description: "\"\\\\n\"" },
        peg$c123 = function() { return "\n"; },
        peg$c124 = "\\r",
        peg$c125 = { type: "literal", value: "\\r", description: "\"\\\\r\"" },
        peg$c126 = function() { return "\r"; },
        peg$c127 = "\\t",
        peg$c128 = { type: "literal", value: "\\t", description: "\"\\\\t\"" },
        peg$c129 = function() { return "\t"; },
        peg$c130 = "\\u",
        peg$c131 = { type: "literal", value: "\\u", description: "\"\\\\u\"" },
        peg$c132 = function(digits) {
          return String.fromCharCode(parseInt("0x" + digits));
        },
        peg$c133 = function(h1, h2, h3, h4) { return h1+h2+h3+h4; },
        peg$c134 = function(c1, rest) { return [ c1 ].concat(rest).join(''); },
        peg$c135 = /^[^ \t\n\r\-0-9(); "',`{}.,:[\]]/,
        peg$c136 = { type: "class", value: "[^ \\t\\n\\r\\-0-9\\(\\)\\;\\ \\\"\\'\\,\\`\\{\\}\\.\\,\\:\\[\\]]", description: "[^ \\t\\n\\r\\-0-9\\(\\)\\;\\ \\\"\\'\\,\\`\\{\\}\\.\\,\\:\\[\\]]" },
        peg$c137 = /^[^ \t\n\r(); "',`{}.,:[\]]/,
        peg$c138 = { type: "class", value: "[^ \\t\\n\\r\\(\\)\\;\\ \\\"\\'\\,\\`\\{\\}\\.\\,\\:\\[\\]]", description: "[^ \\t\\n\\r\\(\\)\\;\\ \\\"\\'\\,\\`\\{\\}\\.\\,\\:\\[\\]]" },
        peg$c139 = { type: "other", description: "whitespace" },
        peg$c140 = /^[ \t\n\r]/,
        peg$c141 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c142 = /^[\n\r\u2028\u2029]/,
        peg$c143 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c144 = { type: "other", description: "end of line" },
        peg$c145 = "\r\n",
        peg$c146 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c147 = "\n",
        peg$c148 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c149 = "\r",
        peg$c150 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c151 = "\u2028",
        peg$c152 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c153 = "\u2029",
        peg$c154 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c155 = { type: "any", description: "any character" },
        peg$c156 = "//",
        peg$c157 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c158 = function(chars) {
          return {comment: chars.join('')};
        },
        peg$c159 = "/*",
        peg$c160 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c161 = "*/",
        peg$c162 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c163 = function(chars) { return {comment: chars.join('')}; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseTypeExp();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseTypeExp();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTypeExp() {
      var s0;

      s0 = peg$parsePrimitiveTypeExp();
      if (s0 === peg$FAILED) {
        s0 = peg$parseArrayTypeExp();
        if (s0 === peg$FAILED) {
          s0 = peg$parseObjectTypeExp();
          if (s0 === peg$FAILED) {
            s0 = peg$parseOneOfTypeExp();
            if (s0 === peg$FAILED) {
              s0 = peg$parseProcedureTypeExp();
            }
          }
        }
      }

      return s0;
    }

    function peg$parsePrimitiveTypeExp() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 4) === peg$c4) {
          s1 = peg$c4;
          peg$currPos += 4;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 7) === peg$c7) {
            s1 = peg$c7;
            peg$currPos += 7;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9();
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 4) === peg$c10) {
              s1 = peg$c10;
              peg$currPos += 4;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c9();
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.substr(peg$currPos, 7) === peg$c12) {
                s1 = peg$c12;
                peg$currPos += 7;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c13); }
              }
              if (s1 !== peg$FAILED) {
                s2 = peg$parse_();
                if (s2 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c14();
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.substr(peg$currPos, 3) === peg$c15) {
                  s1 = peg$c15;
                  peg$currPos += 3;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c16); }
                }
                if (s1 !== peg$FAILED) {
                  s2 = peg$parse_();
                  if (s2 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c14();
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  if (input.substr(peg$currPos, 5) === peg$c17) {
                    s1 = peg$c17;
                    peg$currPos += 5;
                  } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c18); }
                  }
                  if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c19();
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    if (input.substr(peg$currPos, 6) === peg$c20) {
                      s1 = peg$c20;
                      peg$currPos += 6;
                    } else {
                      s1 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c21); }
                    }
                    if (s1 !== peg$FAILED) {
                      s2 = peg$parse_();
                      if (s2 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c22();
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      if (input.substr(peg$currPos, 4) === peg$c23) {
                        s1 = peg$c23;
                        peg$currPos += 4;
                      } else {
                        s1 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c24); }
                      }
                      if (s1 !== peg$FAILED) {
                        s2 = peg$parse_();
                        if (s2 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c25();
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseArrayTypeExp() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 91) {
        s1 = peg$c26;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTypeExp();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 93) {
                s5 = peg$c28;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c29); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c30(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseObjectTypeExp() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 123) {
        s1 = peg$c31;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c32); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsePropTypeExp();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsePropTypeExp();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 125) {
                s5 = peg$c33;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c34); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c35(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsePropTypeExp() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
